# loom

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-05-loom-py-implementation.md  2026-06-27-tools-system-implementation.md  2026-06-28-real-project-smoke-loop-implementation.md  (+3 more)
src/loom/: __init__.py
tests/: test_package_structure.py  test_setup.py
tests/composition/: test_composition.py
tests/core/: test_context_boundary.py  test_core_contracts.py
tests/evolution/: test_evolution.py  test_evolution_analyze.py  test_evolution_artifacts.py  test_evolution_episodes.py  test_evolution_proposals.py  test_evolution_scoring.py
tests/integration/: test_complex_composition_pipeline.py  test_complex_context_boundary.py  test_complex_evolution_lifecycle.py  test_complex_llm_tool_calling.py  test_complex_trace_lifecycle.py  test_composition_examples.py  test_context_boundary_example.py  test_end_to_end_loom_flow.py  test_evolution_examples.py  test_live_llm_smoke.py  test_llm_loop_example.py  test_minimal_loop_example.py  test_real_project_smoke.py  test_trace_driven_evolution.py  test_trace_query_example.py
tests/llm/: test_llm.py
tests/observability/: test_in_memory_trace_store.py  test_trace_persistence.py
tests/runtime/: test_plugins.py  test_runtime.py
tests/tasks/: test_task_cli.py  test_task_config.py  test_task_runner.py
tests/tools/: test_tools_composer.py  test_tools_contracts.py  test_tools_evaluation.py  test_tools_resolver.py
tests/unit/: test_tool_selection.py  test_tui_app.py  test_tui_collector.py  test_tui_plugin.py
(+48 files in other folders)
